packages/rmw/zenoh/zpico-sys/c/include/zpico.h

/**
 * Success
 */
#define ZPICO_OK 0
/**
 * Generic error
 */
#define ZPICO_ERR_GENERIC -1
/**
 * Invalid handle
 */
#define ZPICO_ERR_INVALID -7
/**
 * Caller's buffer cannot hold the value, which is REFUSED rather than
 * truncated (phase-381 W1) — a partial keyexpr names a different, plausible
 * entity, so `zpico_liveliness_entry` never returns one.
 */
#define ZPICO_ERR_BUFFER -10
/**
 * Opaque per-session handle (issue 0348 / phase-328). A `zpico_session_t*`
 * points into the C shim's compile-time session pool
 * (`ZPICO_MAX_SESSIONS`, default 1). Every `zpico_*` entry point that
 * operates on a session takes one as its leading argument. Rust never
 * dereferences it — it is a bare pointer forwarded to the C shim.
 *
 * EXCEPTIONS to the handle rule (process-wide, no session arg):
 * `zpico_set_task_config` / `zpico_set_flush_task_config` are process-wide
 * task-spawn DEFAULTS applied at `zpico_open` (they are called from board
 * boot before any session exists), and `zpico_get_diag_counters` /
 * `zpico_uses_polling` / the clock helpers are process-global.
 */
typedef struct zpico_session_t {
  uint8_t _private[0];
} zpico_session_t;
/**
 * Callback function type for receiving queries (service requests).
 *
 * # Parameters
 * * `keyexpr` - Key expression string (not null-terminated)
 * * `keyexpr_len` - Length of key expression
 * * `payload` - Pointer to request payload (may be NULL)
 * * `payload_len` - Length of payload in bytes
 * * `ctx` - User-provided context pointer
 */
typedef void (*ZpicoQueryCallback)(const char *keyexpr,
                                   size_t keyexpr_len,
                                   const uint8_t *payload,
                                   size_t payload_len,
                                   void *ctx);
/**
 * The session's pool index (0..ZPICO_MAX_SESSIONS), or -1 if invalid.
 * Scopes the Rust shim's process-global tables per session (issue 0376).
 */
int32_t zpico_session_index(struct zpico_session_t *_session);
/**
 * Combined poll and keepalive operation.
 *
 * For threaded backends, this is just a brief poll. For polling
 * backends, this handles both network I/O and zenoh protocol
 * maintenance (keep-alives).
 *
 * # Parameters
 * * `timeout_ms` - Maximum time to wait (0 = non-blocking)
 *
 * # Returns
 * Number of events processed, or negative on error.
 */
int32_t zpico_spin_once(struct zpico_session_t *_session, uint32_t _timeout_ms);
/**
 * Check if the current backend uses polling.
 *
 * # Returns
 * true if polling required (smoltcp), false if threaded (Zephyr, POSIX).
 */
bool zpico_uses_polling(void);
/**
 * Declare a queryable for receiving service requests.
 *
 * # Parameters
 * * `keyexpr` - Key expression string, null-terminated.
 * * `callback` - Callback function to invoke when queries arrive
 * * `ctx` - User context pointer passed to callback
 *
 * # Returns
 * Queryable handle (>= 0) on success, negative error code on failure.
 */
int32_t zpico_declare_queryable(struct zpico_session_t *_session,
                                const char *_keyexpr,
                                ZpicoQueryCallback _callback,
                                void *_ctx);
/**
 * Undeclare a queryable.
 *
 * # Parameters
 * * `handle` - Queryable handle
 *
 * # Returns
 * 0 on success, negative error code on failure.
 */
int32_t zpico_undeclare_queryable(struct zpico_session_t *_session, int32_t _handle);
/**
 * Reply to a query (must be called within query callback).
 *
 * # Parameters
 * * `keyexpr` - Reply key expression string, null-terminated.
 * * `data` - Pointer to reply data buffer
 * * `len` - Length of data in bytes
 * * `attachment` - Pointer to attachment buffer (may be NULL)
 * * `attachment_len` - Length of attachment in bytes
 *
 * # Returns
 * 0 on success, negative error code on failure.
 */
int32_t zpico_query_reply(struct zpico_session_t *_session,
                          int32_t _queryable_handle,
                          int64_t _reply_seq,
                          const char *_keyexpr,
                          const uint8_t *_data,
                          size_t _len,
                          const uint8_t *_attachment,
                          size_t _attachment_len);
/**
 * Phase 237 — reply-slot index from the most recent query callback (the
 * deferred-reply seq); call from inside the synchronous query callback.
 * Stub returns -1 (no slot) in the pure-Rust no-op build.
 */
int64_t zpico_queryable_take_reply_seq(struct zpico_session_t *_session, int32_t _queryable_handle);
/**
 * Send a query and wait for reply (blocking, for service client).
 *
 * # Parameters
 * * `keyexpr` - Key expression string, null-terminated.
 * * `payload` - Request payload (may be NULL)
 * * `payload_len` - Length of payload in bytes
 * * `reply_buf` - Buffer to receive reply data
 * * `reply_buf_size` - Size of reply buffer
 * * `timeout_ms` - Timeout in milliseconds
 *
 * # Returns
 * Number of bytes in reply on success, negative error code on failure.
 */
int32_t zpico_get(struct zpico_session_t *_session,
                  const char *_keyexpr,
                  const uint8_t *_payload,
                  size_t _payload_len,
                  uint8_t *_reply_buf,
                  size_t _reply_buf_size,
                  uint32_t _timeout_ms);
/**
 * Start a non-blocking query (for async service client).
 *
 * Returns a non-negative slot handle on success, negative error code on failure.
 */
int32_t zpico_get_start(struct zpico_session_t *_session,
                        const char *_keyexpr,
                        const uint8_t *_payload,
                        size_t _payload_len,
                        uint32_t _timeout_ms);
/**
 * Issue 0153 — attachment-carrying query start (rmw_zenoh service interop).
 */
int32_t zpico_get_start_with_attachment(struct zpico_session_t *_session,
                                        const char *_keyexpr,
                                        const uint8_t *_payload,
                                        size_t _payload_len,
                                        const uint8_t *_attachment,
                                        size_t _attachment_len,
                                        uint32_t _timeout_ms);
/**
 * Check for a reply to a pending non-blocking query.
 *
 * Returns positive byte count on reply, 0 if still pending, negative on error/timeout.
 */
int32_t zpico_get_check(struct zpico_session_t *_session,
                        int32_t _handle,
                        uint8_t *_reply_buf,
                        size_t _reply_buf_size);
/**
 * Start a non-blocking liveliness query (for wait_for_service).
 */
int32_t zpico_liveliness_get_start(struct zpico_session_t *_session,
                                   const char *_keyexpr,
                                   uint32_t _timeout_ms);
/**
 * Poll a pending liveliness query.
 *
 * Returns 1 on first matching token reply, 0 if still pending, -9 on
 * timeout (dropper fired without replies), other negative on error.
 */
int32_t zpico_liveliness_get_check(struct zpico_session_t *_session, int32_t _handle);
/**
 * phase-381 W1 — a liveliness query that KEEPS its replies' keyexprs.
 *
 * `zpico_liveliness_get_start` answers "does anything match"; reading the
 * ROS graph needs "WHAT matched", and a liveliness reply carries all of it
 * in the keyexpr. Same slot pool, same start/poll shape — poll with
 * `zpico_liveliness_get_check`, then read with the two below. Costs no
 * extra storage: the slot's reply buffer is dead weight on a liveliness
 * query, whose token payload is empty.
 */
int32_t zpico_liveliness_collect_start(struct zpico_session_t *_session,
                                       const char *_keyexpr,
                                       uint32_t _timeout_ms);
/**
 * Has the collecting sweep FINISHED (dropper fired)? Distinct from
 * `zpico_liveliness_get_check`, which reports the FIRST reply.
 */
int32_t zpico_liveliness_collect_done(struct zpico_session_t *_session, int32_t _handle);
/**
 * How many keyexprs the slot STORED — distinct from
 * `zpico_liveliness_get_count`, which reports how many ARRIVED. They differ
 * exactly when the buffer could not hold an entry, so comparing the two is
 * how a caller learns the enumeration was truncated.
 */
int32_t zpico_liveliness_entry_count(struct zpico_session_t *_session, int32_t _handle);
/**
 * Copy stored keyexpr `index` into `out`, NUL-terminated. Returns the byte
 * count excluding the NUL, `ZPICO_ERR_INVALID` for a bad handle or index,
 * or `ZPICO_ERR_BUFFER` when `cap` cannot hold the entry plus its NUL — a
 * short buffer is refused rather than truncated.
 */
int32_t zpico_liveliness_entry(struct zpico_session_t *_session,
                               int32_t _handle,
                               uint32_t _index,
                               char *_out,
                               size_t _cap);
/**
 * phase-381 / issue 0903 — start the standing graph cache (a liveliness
 * SUBSCRIBER with history), replacing the per-question sweep. Idempotent.
 */
int32_t zpico_graph_cache_start(struct zpico_session_t *_session, const char *_keyexpr);
/**
 * Stop the graph cache and release its subscriber. Idempotent.
 */
int32_t zpico_graph_cache_stop(struct zpico_session_t *_session);
/**
 * How many tokens the graph cache holds; `out_dropped` receives how many
 * did not fit.
 */
int32_t zpico_graph_entry_count(struct zpico_session_t *_session, uint32_t *_out_dropped);
/**
 * Copy cached keyexpr `index` into `out`, NUL-terminated.
 */
int32_t zpico_graph_entry_at(struct zpico_session_t *_session,
                             uint32_t _index,
                             char *_out,
                             size_t _cap);
/**
 * The PURE half of `zpico_liveliness_entry`: index into a NUL-separated
 * run. Split out so the walk is testable WITHOUT a live session, because
 * this is where an off-by-one costs a WRONG keyexpr rather than a missing
 * one.
 */
int32_t zpico_entry_at(const uint8_t *_buf,
                       size_t _len,
                       uint32_t _count,
                       uint32_t _index,
                       char *_out,
                       size_t _cap);
/**
 * Phase 108.C.zenoh.4-followup — count of liveliness-token
 * replies on this slot. Used by the subscriber-side
 * `LivelinessChanged` bridge to surface `alive_count > 1`.
 */
int32_t zpico_liveliness_get_count(struct zpico_session_t *_session, int32_t _handle);
/**
 * Register a reply waker callback for async service client support.
 */
void zpico_set_reply_waker(struct zpico_session_t *_session, void (*_func)(int32_t, int32_t));
/**
 * Capture the current clock into an opaque 16-byte buffer.
 * Used by FFI reentrancy guard timeout decomposition.
 */
void zpico_clock_start(uint8_t *_clock_buf);
/**
 * Return elapsed milliseconds since a clock captured by `zpico_clock_start`.
 */
unsigned long zpico_clock_elapsed_ms_since(uint8_t *_clock_buf);