packages/rmw/zenoh/zpico-sys/src/lib.rs


    // Queryables (for services)
    pub fn zpico_declare_queryable(
        session: *mut zpico_session_t,
        keyexpr: *const core::ffi::c_char,
        callback: ZpicoQueryCallback,
        ctx: *mut c_void,
    ) -> i32;
    pub fn zpico_undeclare_queryable(session: *mut zpico_session_t, handle: i32) -> i32;
    pub fn zpico_query_reply(
        session: *mut zpico_session_t,
        queryable_handle: i32,
        reply_seq: i64,
        keyexpr: *const core::ffi::c_char,
        data: *const u8,
        len: usize,
        attachment: *const u8,
        attachment_len: usize,
    ) -> i32;
    /// Phase 237 — reply-slot index from the most recent query callback (the
    /// deferred-reply seq); call from inside the synchronous query callback.
    pub fn zpico_queryable_take_reply_seq(
        session: *mut zpico_session_t,
        queryable_handle: i32,
    ) -> i64;

    // Service client (queries)
    pub fn zpico_get(
        session: *mut zpico_session_t,
        keyexpr: *const core::ffi::c_char,
        payload: *const u8,
        payload_len: usize,
        reply_buf: *mut u8,
        reply_buf_size: usize,
        timeout_ms: u32,
    ) -> i32;

    // Non-blocking service client (async queries)
    pub fn zpico_get_start(
        session: *mut zpico_session_t,
        keyexpr: *const core::ffi::c_char,
        payload: *const u8,
        payload_len: usize,
        timeout_ms: u32,
    ) -> i32;
    pub fn zpico_get_start_with_attachment(
        session: *mut zpico_session_t,
        keyexpr: *const core::ffi::c_char,
        payload: *const u8,
        payload_len: usize,
        attachment: *const u8,
        attachment_len: usize,
        timeout_ms: u32,
    ) -> i32;
    pub fn zpico_get_check(
        session: *mut zpico_session_t,
        handle: i32,
        reply_buf: *mut u8,
        reply_buf_size: usize,
    ) -> i32;

    // Non-blocking liveliness query (for wait_for_service / wait_for_action_server).
    pub fn zpico_liveliness_get_start(
        session: *mut zpico_session_t,
        keyexpr: *const core::ffi::c_char,
        timeout_ms: u32,
    ) -> i32;
    pub fn zpico_liveliness_get_check(session: *mut zpico_session_t, handle: i32) -> i32;
    /// Phase 108.C.zenoh.4-followup — count of liveliness-token
    /// replies on this slot. Used by the subscriber-side
    /// `LivelinessChanged` bridge to surface `alive_count > 1`.
    pub fn zpico_liveliness_get_count(session: *mut zpico_session_t, handle: i32) -> i32;

    /// phase-381 W1 — a liveliness query that KEEPS its replies' keyexprs.
    /// Poll with `zpico_liveliness_get_check`, then read with the two below.
    pub fn zpico_liveliness_collect_start(
        session: *mut zpico_session_t,
        keyexpr: *const core::ffi::c_char,
        timeout_ms: u32,
    ) -> i32;

    /// How many keyexprs were STORED — compare against
    /// `zpico_liveliness_get_count` (how many ARRIVED) to detect truncation.
    /// Has the collecting sweep FINISHED? `zpico_liveliness_get_check` returns
    /// 1 on the FIRST reply, so restarting on that truncates enumeration.
    pub fn zpico_liveliness_collect_done(session: *mut zpico_session_t, handle: i32) -> i32;

    pub fn zpico_liveliness_entry_count(session: *mut zpico_session_t, handle: i32) -> i32;

    /// Copy stored keyexpr `index` into `out`. Returns bytes written excluding
    /// the NUL, or a negative `ZPICO_ERR_*`.
    pub fn zpico_liveliness_entry(
        session: *mut zpico_session_t,
        handle: i32,
        index: u32,
        out: *mut core::ffi::c_char,
        cap: usize,
    ) -> i32;

    /// The PURE half of `zpico_liveliness_entry`: index into a NUL-separated
    /// run. Reachable without a live session, which is why the graph cache
    /// reuses it to walk its snapshot instead of growing a second walk.
    pub fn zpico_entry_at(
        buf: *const u8,
        len: usize,
        count: u32,
        index: u32,
        out: *mut core::ffi::c_char,
        cap: usize,
    ) -> i32;

    /// phase-381 / issue 0903 — the GRAPH CACHE, which replaces the per-question
    /// liveliness sweep.
    ///
    /// A liveliness get is an INTEREST under the hood, and a token only reaches
    /// a get's callback when the router tags its declaration with that interest
    /// id. Measured against a live `rmw_zenoh_cpp` talker, two sweeps in flight
    /// did not both receive replies, and a single sweep saw 2-4 of the dozen
    /// tokens the talker declares — a different subset each run. A SUBSCRIBER
    /// with `history` is what `rmw_zenoh_cpp` uses for its own graph cache and
    /// removes the class: one standing declaration, current tokens delivered
    /// once, later changes pushed.
    ///
    /// Idempotent, so every graph entry point may call it without coordinating.
    pub fn zpico_graph_cache_start(
        session: *mut zpico_session_t,
        keyexpr: *const core::ffi::c_char,
    ) -> i32;

    /// Stop the cache and release the subscriber. Idempotent.
    pub fn zpico_graph_cache_stop(session: *mut zpico_session_t) -> i32;

    /// How many tokens the cache holds, and how many did not fit.
    pub fn zpico_graph_entry_count(session: *mut zpico_session_t, out_dropped: *mut u32) -> i32;

    /// Copy cached keyexpr `index` into `out`, NUL-terminated. ONE entry per
    /// call, under the C side's lock — the cache is sized for a real ROS graph
    /// (tens of KB), which cannot live on an embedded caller's stack, and this
    /// keeps that capacity a fact about the C side alone.
    pub fn zpico_graph_entry_at(
        session: *mut zpico_session_t,
        index: u32,
        out: *mut core::ffi::c_char,
        cap: usize,
    ) -> i32;

    /// The session's pool index (0..ZPICO_MAX_SESSIONS), or -1 if the handle is
    /// not a valid pool slot. Used to scope the Rust shim's process-global
    /// service-buffer / reply-waker tables per session (issue 0376).
    pub fn zpico_session_index(session: *mut zpico_session_t) -> i32;

    // Reply waker callback (for async service client) — per-session. The
    // callback receives (session_index, slot) so the Rust waker table is
    // session-scoped (issue 0376).
    pub fn zpico_set_reply_waker(
        session: *mut zpico_session_t,
        func: Option<unsafe extern "C" fn(i32, i32)>,
    );

    // Phase 127.D — get/get_check/reply-handler/dropper diagnostic counters
    // (process-global — see the zpico_session_t exception note above).
    // out fills with [get_start, get_check, get_check_returns_data,
    // reply_handler_calls, reply_dropper_calls].
    pub fn zpico_get_diag_counters(out: *mut u32);

    // Polling
    pub fn zpico_spin_once(session: *mut zpico_session_t, timeout_ms: u32) -> i32;
    pub fn zpico_uses_polling() -> bool;

    // Clock helpers (for FFI reentrancy guard timeout decomposition) — process-global.
    pub fn zpico_clock_start(clock_buf: *mut u8);
    pub fn zpico_clock_elapsed_ms_since(clock_buf: *mut u8) -> core::ffi::c_ulong;
}

// ============================================================================
// Tests
// ============================================================================

#[cfg(test)]
mod tests {
    use super::*;

    /// phase-381 W1 — the NUL-separated entry walk, against the REAL C
    /// function rather than a Rust copy of it.
    ///
    /// `zpico_entry_at` is the pure half of `zpico_liveliness_entry`, split out
    /// precisely so it can be reached without a live zenoh session. This is
    /// where an off-by-one costs a WRONG keyexpr rather than a missing one, and
    /// a wrong one names a real, different node — so the last entry (which has
    /// no trailing separator to lean on) and the short-buffer refusal both get
    /// their own case.
    #[test]
    fn entry_walk_indexes_a_nul_separated_run() {
        unsafe extern "C" {
            fn zpico_entry_at(
                buf: *const u8,
                len: usize,
                count: u32,
                index: u32,
                out: *mut core::ffi::c_char,
                cap: usize,
            ) -> i32;
        }

        // Exactly what the reply handler writes: each keyexpr NUL-terminated.
        let raw: &[u8] =
            b"@ros2_lv/0/aa/1/2/talker\0@ros2_lv/0/bb/1/3/listener\0@ros2_lv/0/cc/1/4/x\0";
        let mut out = [0i8; 128];

        let read = |index: u32, cap: usize, out: &mut [i8; 128]| -> i32 {
            unsafe {
                zpico_entry_at(
                    raw.as_ptr(),
                    raw.len(),
                    3,
                    index,
                    out.as_mut_ptr().cast::<core::ffi::c_char>(),
                    cap,
                )
            }
        };
        // `no_std`: compare the written bytes directly rather than building a
        // String.
        fn written(out: &[i8; 128], n: i32) -> &[u8] {
            // SAFETY: `out` is a plain byte array reinterpreted as unsigned;
            // `n` is what the C function reported it wrote.
            unsafe { core::slice::from_raw_parts(out.as_ptr().cast::<u8>(), n as usize) }
        }

        let n = read(0, out.len(), &mut out);
        assert_eq!(written(&out, n), b"@ros2_lv/0/aa/1/2/talker", "first entry");

        let n = read(1, out.len(), &mut out);
        assert_eq!(
            written(&out, n),
            b"@ros2_lv/0/bb/1/3/listener",
            "middle entry"
        );

        let n = read(2, out.len(), &mut out);
        assert_eq!(
            written(&out, n),
            b"@ros2_lv/0/cc/1/4/x",
            "LAST entry — no trailing separator to lean on"
        );

        assert_eq!(
            read(3, out.len(), &mut out),
            ZPICO_ERR_INVALID,
            "an index past the stored count must be refused, not read off the end"
        );

        // The reason a short buffer must never truncate: the prefix of a
        // keyexpr is itself a VALID keyexpr, naming a different entity.
        assert_eq!(
            read(0, 10, &mut out),
            ZPICO_ERR_BUFFER,
            "a short buffer must be refused rather than truncated"
        );
    }

    #[test]
    fn test_constants() {
        assert_eq!(ZPICO_OK, 0);
        assert_eq!(ZPICO_ERR_GENERIC, -1);
        const { assert!(ZPICO_MAX_PUBLISHERS > 0) };
        const { assert!(ZPICO_MAX_SUBSCRIBERS > 0) };
    }
}
